A couple more slight aesthetic changes. People, please make sure there's enough contrast between text and its background! lol. simple design principle here.
git-svn-id: https://research-cs194.googlecode.com/svn/trunk/research@146 3207efe2-bddd-11de-9616-7b1d4728551e

--- a/public/stylesheets/job.css
+++ b/public/stylesheets/job.css
@@ -47,7 +47,7 @@
 
 ***REMOVED***browse_header{
 	font-weight: bold;
-	background: ***REMOVED***798493;
+	background: ***REMOVED***798493 url("../images/dashboard_box_grad_darker.png") repeat-x bottom left;
 	color: white;
 	width: 100%;
 	height: 40px;
